# secure-photo-hub

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yaml  openapi.yaml
docs/plantuml/authentication/: 1-authentication-bearer-token.puml  2-authentication-auth-code-flow.puml
docs/plantuml/authorization/: 2-get-image.puml
docs/plantuml/config/: 0-secure-photo-hub-config.puml  1-openid-wellknown-config-jwks-startup.puml  3-aws-s3-config.puml  5-database-config.puml
docs/plantuml/policy-enforcers/: authorization-scopes-class-diagram.puml  policy-enforcer-image-class-diagram.puml  policy-enforcer-photo-class-diagram.puml
docs/plantuml/vault/: 1-kubernetes-vault-init-maintenance.puml
keycloak/: start-keycloak.sh
keycloak/import/: fast-photo-hub-realm.json
migrations/: 20241128184647_create_image_table.sql  20241128195502_create_album_table.sql  20241128195956_create_photo_table.sql  20241229014916_image_owner_id.sql  20250104083931_image_visibility_trigger.sql  20250104084711_add_null_visibility.sql
ops/: build-and-push-image.sh
ops/keycloak/: start-keycloak.sh
ops/keycloak/import/: fast-photo-hub-realm.json  secure-photo-hub-realm.json
ops/kind/: create-kind-dev-cluster.sh  ingress.yaml  kind-host.yaml  start-dev-vault-k8s.sh
ops/microsoft-threat-modeling/: report.htm
ops/postgres/: init_db.sh
ops/redis/: start-redis.sh
ops/s3/: cors-rules.json  secure-photo-hub-bucket-policy.json
ops/threat-dragon/: .env  run-threat-dragon-dev.sh  secure-photo-hub-threat-model.json
ops/vault/: setup-dev.sh
plantuml/authentication/: 1-authentication-bearer-token.puml  2.1-authentication-auth-code-flow.puml
plantuml/authorization/: 1-create-photo.puml
plantuml/config/: 0-secure-photo-hub-config.puml  1-openid-wellknown-config-jwks-startup.puml  3-aws-s3-config.puml  5-database-config.puml
plantuml/policy-enforcers/: policy-enforcer-album-class-diagram.puml
plantuml/vault/: 1-kubernetes-vault-init-maintenance.puml  2-kubernetes-vault-auth-token-process.puml  3-kubernetes-vault-secret-retreival.puml
queries/postgres/: find_album_by_id.sql  find_all_albums.sql  find_all_photo.sql  find_image_reference_by_id.sql  find_photo_by_id.sql  insert_album.sql  insert_image.sql  insert_image_reference.sql  insert_photo.sql  move_photo_to_album.sql  update_album.sql  update_photo.sql
resources/: application-properties.yaml  vault-secrets.yaml
src/: controller.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs  security.rs  service.rs  setup.rs
src/models/: api.rs  entity.rs  service.rs
src/models/api/: album.rs  (+1 more)
src/repository/: album_repository.rs  image_reference_repository.rs  image_repository.rs  photo_repository.rs
src/routes/: album.rs  health_check.rs  image.rs  photo.rs
src/security/: auth.rs  authz.rs  jwks.rs
src/service/: album.rs  image.rs  image_storage.rs  photo.rs
src/setup/: database.rs  http.rs  logging.rs  oidc.rs  redis.rs  s3.rs  utils.rs
tests/: health_check.rs
(+34 files in other folders)
