[package]
name = "secure-photo-hub"
version = "0.1.0"
edition = "2021"
authors = ["Vincenzo Tramo <vv.tramo@gmail.com>"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "debuginfo"


[dependencies]
jsonwebtoken = "9.3.0"
openssl = { version = "0.10.68", features = ["vendored"]}
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.214", features = ["derive", "serde_derive"] }
serde_urlencoded = "0.7.1"
actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["redis-session"] }
anyhow = "1.0.92"
log = "0.4.22"
env_logger = "0.11.5"
base64 = "0.22.1"
ring = "0.17.8"
serde_json = "1.0.132"
http = "1.1.0"
yaml-rust2 = "0.9.0"
aws-config = { version= "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.62.0"
actix-multipart = "0.7.2"
image = { version = "0.25.5", features = ["serde"] }
futures-util = "0.3.31"
async-stream = "0.3.6"
rustls = "0.23.16"
sqlx = { version = "0.8.2", features = ["macros", "sqlx-macros", "derive", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
chrono = "0.4.38"
config = "0.14.1"
async-trait = "0.1.83"
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio = { version = "1.41.0", features = ["macros"] }
mime = "0.3.17"
futures = "0.3.31"
